[gd_scene load_steps=5 format=3 uid="uid://dppte7ssky762"]

[ext_resource type="Script" uid="uid://cjmjvv1fpgi6t" path="res://assets/ui.gd" id="1_etwi0"]
[ext_resource type="Texture2D" uid="uid://cb7nufdiicogs" path="res://content/start_banner.png" id="2_ohefe"]
[ext_resource type="Texture2D" uid="uid://yrcm2n0kmsep" path="res://content/game_over.png" id="3_rvqgq"]

[sub_resource type="SystemFont" id="SystemFont_ohefe"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_etwi0")

[node name="GameOver" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HighScoreLabel" type="RichTextLabel" parent="GameOver"]
layout_mode = 0
offset_left = 309.0
offset_top = 158.0
offset_right = 473.0
offset_bottom = 198.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = SubResource("SystemFont_ohefe")
text = "Your highest score is "
vertical_alignment = 1

[node name="HighScoreDisplay" type="RichTextLabel" parent="GameOver"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 479.0
offset_top = 152.0
offset_right = 539.0
offset_bottom = 202.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = SubResource("SystemFont_ohefe")
theme_override_font_sizes/normal_font_size = 32
text = "0"
vertical_alignment = 1

[node name="StartBanner" type="Sprite2D" parent="GameOver"]
unique_name_in_owner = true
position = Vector2(411, 86)
texture = ExtResource("2_ohefe")

[node name="Dead" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(409, 335)
scale = Vector2(1.9347826, 1.9347826)
texture = ExtResource("3_rvqgq")

[node name="ScoreLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 129.0
offset_bottom = 75.0
theme_override_constants/outline_size = 13
theme_override_font_sizes/normal_font_size = 50
text = "0"
horizontal_alignment = 1
